--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,18 +10,29 @@ environment:
   flutter: 3.19.6 # Fixed Flutter version
 
 dependencies:
+  bloc: ^8.1.4
+  bloc_concurrency: ^0.2.5
+  drift: ^2.18.0
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  hive: ^2.2.3
+  freezed: ^2.5.2
+  freezed_annotation: ^2.4.1
   intl: ^0.18.1
-  mockito: ^5.4.4
+  mocktail: ^1.0.3
+  path: ^1.9.0
+  path_provider: ^2.1.3
+  sqlite3_flutter_libs: ^0.5.21
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  surf_lint_rules: ^1.0.0
+  build_runner: ^2.4.9
+  drift_dev: ^2.18.0
 
 flutter:
   uses-material-design: true
