feat: gitignore has been updated

--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,18 @@
 *.userosscache
 *.sln.docstates
 
-# pubspec.lock
-pubspec.lock
+# Flutter/Dart/Pub related
+**/doc/api/
+**/ios/Flutter/.last_build_id
 .dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+*.lock
+.pub-cache/
+.pub/
+/build/
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
