--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   mocktail: ^1.0.3
   path: ^1.9.0
   path_provider: ^2.1.3
+  provider: ^6.1.2
   sqlite3_flutter_libs: ^0.5.21
 
 dev_dependencies:
