--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,24 +7,26 @@ version: 1.0.0+1
 
 environment:
   sdk: '>=3.3.4 <4.0.0'
-  flutter: 3.19.6 # Fixed Flutter version
+  flutter: 3.22.0 # Fixed Flutter version
 
 dependencies:
-  bloc: ^8.1.4
-  bloc_concurrency: ^0.2.5
-  drift: ^2.18.0
-  equatable: ^2.0.5
+  bloc: '8.1.4'
+  bloc_concurrency: '0.2.5'
+  drift: '2.18.0'
+  equatable: '2.0.5'
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.5
   flutter_localizations:
     sdk: flutter
-  freezed: ^2.5.2
-  freezed_annotation: ^2.4.1
-  intl: ^0.18.1
-  mocktail: ^1.0.3
-  path: ^1.9.0
-  path_provider: ^2.1.3
-  provider: ^6.1.2
+  freezed: '2.5.2'
+  freezed_annotation: '2.4.1'
+  intl: '0.19.0'
+  mocktail: '1.0.3'
+  path: '1.9.0'
+  path_provider: '2.1.3'
+  provider: '6.1.2'
+  shimmer: ^3.0.0
   sqlite3_flutter_libs: ^0.5.21
 
 dev_dependencies:
