--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   equatable: '2.0.5'
   flutter:
     sdk: flutter
+  flutter95: ^1.2.0
   flutter_bloc: ^8.1.5
   flutter_localizations:
     sdk: flutter
